Fire toggling on video player click

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body * {
 .video__player {
   border-radius: 5px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  cursor: pointer;
   display: block;
   width: 100%;
 }
