--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body * {
 }
 
 .video {
+  border-radius: 5px;
   left: 50%;
   max-width: 90%;
   overflow: hidden;
@@ -19,11 +20,11 @@ body * {
   top: 50%;
   transform: translate(-50%, -50%);
   width: 800px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .video__player {
   border-radius: 5px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   cursor: pointer;
   display: block;
   width: 100%;
@@ -39,14 +40,31 @@ body * {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   bottom: 0;
-  box-shadow: 0 -3px 20px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 -3px 20px 20px rgba(0, 0, 0, 0.45);
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   opacity: 0;
-  padding: 15px 10px;
+  padding: 15px;
   position: absolute;
   transition: opacity 0.1s ease;
   width: 100%;
+}
+
+.video__controls-progress {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  height: 3px;
+  margin-bottom: 15px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.video__controls-progress-bar {
+  background-color: #ffffff;
+  border-radius: 10px;
+  height: inherit;
+  width: 0%;
 }
 
 .video__controls-button {
